--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@emotion/core": "^11.0.0",
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
+    "apexcharts": "^3.35.5",
     "framer-motion": "^7.3.2",
     "next": "12.3.0",
     "react": "18.2.0",
+    "react-apexcharts": "^1.4.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0"
   },
